Use vaadin-core to get the platform version for the bom file