@@ -10,6 +10,7 @@ package com.vaadin.appsec.backend;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
@@ -80,15 +81,9 @@ class GitHubService {
 
     static final String VAADIN_ANALYSIS_URI = "https://raw.githubusercontent.com/vaadin/vulnerability-analysis/main/analysis.json";
 
-    static final String FRAMEWORK_RELEASES_URI = "https://api.github.com/repos/vaadin/framework/releases";
-
     static final String FLOW_RELEASES_URI = "https://api.github.com/repos/vaadin/flow/releases";
 
-    static final Pattern FRAMEWORK_7_PATTERN = compile("^7\\.\\d+.\\d+$");
-
-    static final Pattern FRAMEWORK_8_PATTERN = compile("^8\\.\\d+.\\d+$");
-
-    static final Pattern FLOW_24_PATTERN = compile("^24\\.\\d+.\\d+$");
+    static final Pattern FLOW_VERSION_PATTERN = compile("^25\\.\\d+.\\d+$");
 
     static final long NUMBER_OF_LATEST_MAINTAINED_VERSIONS = 4;
 
@@ -98,21 +93,9 @@ class GitHubService {
 
     private VulnerabilityAnalysis analysisCache;
 
-    List<String> getFramework7Versions() {
-        return getVersions(FRAMEWORK_7_PATTERN);
-    }
-
-    List<String> getFramework8Versions() {
-        return getVersions(FRAMEWORK_8_PATTERN);
-    }
-
-    List<String> getFlow24Versions() {
-        return getVersions(FLOW_24_PATTERN);
-    }
-
-    private List<String> getVersions(Pattern flowVersionPattern) {
+    List<String> getFlowVersions() {
         return getReleasesFromGitHub().stream().map(GitHubRelease::getTagName)
-                .filter(flowVersionPattern.asPredicate())
+                .filter(GitHubService.FLOW_VERSION_PATTERN.asPredicate())
                 .limit(NUMBER_OF_LATEST_MAINTAINED_VERSIONS).toList();
     }
 
@@ -124,18 +107,12 @@ class GitHubService {
     }
 
     void updateReleasesCache() {
-        boolean isFlow = AppSecService.getInstance().isFlow();
         ObjectReader listReader = MAPPER.readerForListOf(GitHubRelease.class);
         try {
-            URL releasesUrl;
-            if (isFlow) {
-                releasesUrl = getFlowReleasesUrl();
-            } else {
-                releasesUrl = getFrameworkReleasesUrl();
-            }
-            releasesCache = listReader.readValue(releasesUrl);
-            LOGGER.debug("Vaadin releases cache updated from GitHub "
-                    + releasesCache);
+            URL releasesUrl = getFlowReleasesUrl();
+            releasesCache = listReader.readValue(releasesUrl.openStream());
+            LOGGER.debug("Vaadin releases cache updated from GitHub {}",
+                    releasesCache);
         } catch (IOException e) {
             throw new AppSecException("Cannot get Vaadin releases from GitHub",
                     e);
@@ -153,27 +130,18 @@ class GitHubService {
         ObjectReader jsonReader = MAPPER.readerFor(VulnerabilityAnalysis.class);
         try {
             URL analysisUrl = getVaadinAnalysisUrl();
-            analysisCache = jsonReader.readValue(analysisUrl);
-            LOGGER.debug("Vaadin analysis cache updated from GitHub "
-                    + analysisCache);
+            analysisCache = jsonReader.readValue(analysisUrl.openStream());
+            LOGGER.debug("Vaadin analysis cache updated from GitHub {}",
+                    analysisCache);
         } catch (IOException e) {
             throw new AppSecException("Cannot get Vaadin analysis from GitHub",
                     e);
         }
     }
 
-    protected URL getFrameworkReleasesUrl() {
-        try {
-            return new URL(FRAMEWORK_RELEASES_URI);
-        } catch (MalformedURLException e) {
-            throw new AppSecException("Invalid Vaadin framework releases URL",
-                    e);
-        }
-    }
-
     protected URL getFlowReleasesUrl() {
         try {
-            return new URL(FLOW_RELEASES_URI);
+            return URI.create(FLOW_RELEASES_URI).toURL();
         } catch (MalformedURLException e) {
             throw new AppSecException("Invalid Vaadin Flow releases URL", e);
         }
@@ -198,7 +166,7 @@ class GitHubService {
             }
         } else {
             try {
-                return new URL(VAADIN_ANALYSIS_URI);
+                return URI.create(VAADIN_ANALYSIS_URI).toURL();
             } catch (MalformedURLException e) {
                 throw new AppSecException("Invalid Vaadin analysis URL", e);
             }
